<resources>
    <string name="app_name">Shree Boutique</string>
    <string name="customers">Customers</string>
    <string name="bookings">Bookings</string>
    <string name="employees">Employees</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="datePicker">Pick your Date</string>
    <string name="contactHint">Contact</string>
    <string name="altContactHint">Alt Contact</string>
    <string name="contact_no">Contact No</string>
    <string name="shirt_size">Shirt Size</string>
    <string name="tera_front">Tera Front</string>
    <string name="tera_back">Tera Back</string>
    <string name="gla_front">Gla Front</string>
    <string name="gla_back">Gla Back</string>
    <string name="shoulder">Shoulder</string>
    <string name="upper_chest">Upper Chest</string>
    <string name="chest">Chest</string>
    <string name="under_chest">Under Chest</string>
    <string name="kamar">Kamar</string>
    <string name="hip">Hip</string>
    <string name="full_length">Full Length</string>
    <string name="arm_front">Arm Front</string>
    <string name="arm_length">Arm Length</string>
    <string name="ghera">Ghera</string>
    <string name="no_bookings">Sorry you have no Bookings</string>
    <string name="salwar_plazo_heading">Salwar / Plazo</string>
    <string name="length">Length</string>
    <string name="pauncha">Pauncha</string>
    <string name="assan">Assan</string>
    <string name="belt">Belt</string>
    <string name="thies">Thies</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="dateofdelivery">Date of Delivery</string>
    <string name="customer_name">Customer Name</string>
    <string name="book">Book</string>
    <string name="additional_note">Additional Note</string>
    <string name="note">Note</string>
    <string name="new_booking">New Booking</string>
    <string name="alt_contact">Alternative Contact No.</string>
    <string name="new_employee">New Employee</string>
    <string name="dateofjoining">Date of Joining</string>
    <string name="employee_name">Employee Name</string>
    <string name="add">Add</string>
    <string name="salary">Salary</string>
    <string name="position">Position</string>
    <string name="update_employee">Update Employee</string>
    <string name="update">Update</string>
    <string name="dashboard">Dashboard</string>
    <string name="no_data_available">No Data Available!</string>
    <string name="additonal_information">Additonal Information</string>

</resources>