<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="4dp"
    tools:context=".fragment.CustomersFragment">

    <TextView
        android:id="@+id/tvCustomers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/customers"
        android:textColor="@color/main_color"
        android:layout_margin="8dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
        <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/name"
                android:textColor="@color/main_color"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvCustomers" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/nameHint"
                android:imeOptions="actionNext"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tvCustomers" />

            <TextView
                android:id="@+id/tv_contactNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/contact_no"
                android:textColor="@color/main_color"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <EditText
                android:id="@+id/et_contactNo"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/contactHint"
                android:imeOptions="actionNext"
                android:includeFontPadding="false"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintLeft_toRightOf="@id/tv_contactNo"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/tv_AlternativeContactNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/ubuntu_bold"
        android:includeFontPadding="false"
        android:text="Alt Contact No"
        android:textColor="@color/main_color"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contactNo" />

    <EditText
        android:id="@+id/et_AlternativeContactNo"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:fontFamily="@font/ubuntu_medium"
        android:hint="@string/contactHint"
        android:imeOptions="actionNext"
        android:includeFontPadding="false"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_contactNo"
        app:layout_constraintTop_toBottomOf="@id/et_contactNo" />


    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:fontFamily="@font/ubuntu_bold"
        android:textAllCaps="true"
        android:textColor="@color/white"
        style="@style/MaterialButtonStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>